--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
-  "name": "myapp",
-  "version": "0.0.0",
-  "private": true,
+  "name": "app",
+  "version": "1.0.0",
+  "description": "\"# app\"",
+  "main": "app.js",
+  "dependencies": {
+    "body-parser": "^1.16.1",
+    "debug": "^2.6.1",
+    "ejs": "^2.5.6",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.14.1",
+    "mysql": "^2.13.0",
+    "morgan": "^1.7.0",
+    "serve-favicon": "^2.3.2"
+  },
+  "devDependencies": {},
   "scripts": {
     "start": "node ./bin/www"
   },
-  "dependencies": {
-    "body-parser": "~1.16.0",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.0",
-    "express": "~4.14.1",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xwangq123/app.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/xwangq123/app/issues"
+  },
+  "homepage": "https://github.com/xwangq123/app#readme"
 }
